# c_numconv_benchmark

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: XcodeProperty.cmake
docs/: README.md
docs/reports/: Apple_A12_atoi.html  Apple_A12_dtoa.html  Apple_A12_itoa.html  Apple_A12_strtod.html  Intel_NUC_8i5_clang_atoi.html  Intel_NUC_8i5_clang_dtoa.html  Intel_NUC_8i5_clang_itoa.html  Intel_NUC_8i5_clang_strtod.html  Intel_NUC_8i5_gcc_atoi.html  Intel_NUC_8i5_gcc_dtoa.html  Intel_NUC_8i5_gcc_itoa.html  Intel_NUC_8i5_gcc_strtod.html  Intel_NUC_8i5_msvc_atoi.html  Intel_NUC_8i5_msvc_dtoa.html  Intel_NUC_8i5_msvc_itoa.html  Intel_NUC_8i5_msvc_strtod.html  atoi.html  dtoa.html  itoa.html  strtod.html
docs/reports/clang_apple_m1/: atoi.html  dtoa.html  itoa.html  strtod.html
docs/reports/clang_intel_i5_13600/: atoi.html  dtoa.html  itoa.html  strtod.html
docs/reports/gcc_intel_i5_13600/: atoi.html  dtoa.html  itoa.html  strtod.html
docs/reports/msvc_intel_i5_13600/: atoi.html  dtoa.html  itoa.html  strtod.html
src/atoi/: atoi_lemire.c  atoi_libc.c  atoi_libcpp.cpp  atoi_null.c  atoi_yy.c  benchmark.c  benchmark.h
src/dtoa/: benchmark.c  benchmark_helper.cpp  dtoa_david_gay.c  dtoa_dragonbox.cpp  dtoa_emyg.cpp  dtoa_erthink.cpp  dtoa_fmtlib.cpp  dtoa_fpconv.c  dtoa_google.cpp  dtoa_grisu3.cpp  dtoa_grisu_exact.cpp  dtoa_milo.cpp  dtoa_null.c  dtoa_printf.c  dtoa_ryu.c  dtoa_ryu_mod.c  dtoa_ryu_yy.c  dtoa_schubfach.cpp  dtoa_swift.c  dtoa_xjb.cpp  dtoa_yy.c
src/itoa/: benchmark.c  itoa_amartin.cpp  itoa_amartin_ljust.cpp  itoa_amartin_ljust2.cpp  itoa_an.c  itoa_branchlut.c  itoa_branchlut2.c  itoa_count.c  itoa_countlut.c  itoa_fmtlib.cpp  itoa_jeaiii.c  itoa_jeaiii.cpp  itoa_jiaendu.c  itoa_lut.c  itoa_naive.c  itoa_null.c  itoa_protobuf.c  itoa_sprintf.c  itoa_sse2.cpp  itoa_tmueller.c  itoa_unnamed.c  itoa_unrolledlut.c  itoa_yy.c  itoa_yy_largelut.c
src/main/: main.c
src/main/ios/: Info.plist  LaunchScreen.storyboard  main.m
src/strtod/: benchmark.c  benchmark_helper.h  strtod_abseil.cpp  strtod_david_gay.c  strtod_google.cpp  strtod_lemire.cpp  strtod_libc.c  strtod_null.c  strtod_ryu.c  strtod_yy.c  strtod_yy_fast.c
